# controll

./: .gitignore  README.md  app.py  client.py  qt_app.py  requirements.txt  server.py  setup.py  start.bat  start.ps1  start.sh  start_client.sh  start_gui.sh  start_qt.bat  start_qt.ps1  start_qt.sh  start_server.sh  test.py
electron/: main.js  package.json  preload.js
electron/renderer/: index.html  renderer.js
rust/: Cargo.toml  README.md
rust/src/: discovery.rs  gui.rs  input.rs  main.rs  protocol.rs  state.rs  ws.rs
