[package]
name = "controll-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
tokio = { version = "1", features = ["rt-multi-thread","macros","net","time","sync"] }
tokio-tungstenite = "0.21"
futures = "0.3"
anyhow = "1"
socket2 = "0.5"
libc = "0.2"
rdev = { version = "0.5", features = ["unstable_grab"] }
enigo = "0.2"
eframe = { version = "0.33", default-features = true }
egui = "0.33"